Предметы исправление по ревью